# SoftwareTopics

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
data/raw/: all_topics_freq.csv  gitranking.jsonl
notebooks/: 0_Embedding_Code.ipynb  10_LLM_application_domain_check.ipynb  11_Combine_Taxonomy.ipynb  12_Filter_Comined_Taxonomy.ipynb  3_Embedding_Mutiples_mpnet_CodeSearch.ipynb  4_Embedding_Mutiples_unixcoder.ipynb  5_Embedding_Mutiples_SentenceT5-nlpl_code_search.ipynb  6_Embedding_Mutiples_SO_MPnet.ipynb  8_LLM_Gitranking_CSO_Completion.ipynb  9_LLM_Labels_Embedding.ipynb  9_LLM_Taxonomy_Embedding.ipynb
scripts/R/: corr_heatmap.R  cso_wikiid_correctness.csv  grouped_metrics.R  hyperparams_corr.R  intra_intersections.R  metric_pp_distribution.R  metrics.R  models_stats_dist.R  wikiid_correctness.R
scripts/bash/: init_env.sh
scripts/python/: annotations_eval.py  clean.py  clean_prediction.py  combine_results.py  combine_with_gpt.py  correct_stats.py  cso_wikidata_link_check.py  get_wikitypes_gitranking_ad.py  hyperparameter_correlation.py  join_gitranking_cso.py  json2csv_taxonomy.py  llm_taxo_build.py  llm_taxo_completion.py  llm_taxo_eval.py  rank.py  taxonomy_metrics.py  taxonomy_pairs_example.py
src/completion/: __init__.py  completion.py  cso.py  llm.py  llm_iter.py  llm_patch.py  wikidata.py
src/conf/: complete_taxonomy.yaml  ensemble.yaml  inter_eval.yaml  optimize.yaml  patch_taxonomy.yaml  process_taxonomy.yaml
src/ensemble/: cascade.py  disambiguate.py  ensemble.py  simple.py
src/entity/: __init__.py  gitranking.py  taxonomy.py
src/metrics/: __init__.py  graph.py  other.py  semantic.py
src/optimizer/: mcdm.py  optimizer.py  pareto.py  scoring.py
src/pipeline/: LLM_pair_eval.py  complete_taxonomy.py  ensemble_taxonomies.py  evaluation_metrics.py  find_equivalent.py  graph_build.py  hyperparameter_optimization.py  inter_models_eval.py  patch_taxonomy.py  (+1 more)
(+38 files in other folders)
