[tool.poetry]
name = "softwaretopics"
version = "0.1.0"
description = ""
authors = ["Cezar Sas <cezar.sas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bertopic = "^0.16.0"
datasets = "^2.15.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.3"
xformers = "^0.0.23"
adjusttext = "^0.8"
hydra-core = "^1.3.2"
rdflib = "^7.0.0"
requests = "^2.29.0"
multiset = "^3.0.2"
pydot = "^2.0.0"
pyvis = "^0.3.2"
langchain = "^0.1.1"
langchain-openai = "^0.0.2.post1"
wikidata = "^0.7.0"
loguru = "^0.7.2"
inflect = "^7.0.0"
sentence-transformers = "^2.3.1"
pydantic = "^2.6.4"
hydra-joblib-launcher = "^1.2.0"
torchmetrics = "^1.4.0"
rapidfuzz = "^3.9.0"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
