[tool.poetry]
name = "softwaretopics"
version = "0.1.0"
description = ""
authors = ["Cezar Sas <cezar.sas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bertopic = "^0.16.2"
datasets = "^2.19"
accelerate = "^0.31"
bitsandbytes = "^0.43.1"
xformers = "^0.0.26.post1"
adjusttext = "^1.1.1"
hydra-core = "^1.3.2"
rdflib = "^7.0.0"
requests = "^2.32.2"
multiset = "^3.0.2"
pydot = "^2.0.0"
pyvis = "^0.3.2"
langchain = "^0.2"
langchain-openai = "^0.1"
wikidata = "^0.7.0"
loguru = "^0.7.2"
inflect = "^7.2.1"
sentence-transformers = "^3.0.0"
pydantic = "^2.7"
hydra-joblib-launcher = "^1.2.0"
torchmetrics = "^1.4.0"
rapidfuzz = "^3.9"
paretoset = "^1.2.3"
pymcdm = "^1.2.1"
pingouin = "^0.5.4"
langchain-community = "^0.2"
openpyxl = "^3.1.4"
agreement = "^0.1.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
